--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -9,5 +9,5 @@ screenshot.rel.path=../Screenshots/
 basefolder.datetimepattern=d_MMM_YY HH_mm_ss
 systeminfo.os=windows
 systeminfo.Engineer= Automation Alchemy
-systeminfo.Project= DSAlgoTest
+systeminfo.Project= Project_Presentation
 systeminfo.Browser= GoogleChrome
